# cuda_notebook

./: .gitignore  readme.md
gemm/: .gitignore  CMakeLists.txt  cuda_note.md  main_fp16.cpp  main_fp32.cpp  readme.md
gemm/include/: cuda_gemm.hpp  cuda_gemm_utils.cuh  profile_utils.cuh
gemm/src/: cuda_gemm_utils.cu  gemm_0.cpp  gemm_0.cu  gemm_1.cu  gemm_2.cu  gemm_3.cu  gemm_4.cu  gemm_5.cu  gemm_6.cu  gemm_7.cu  gemm_cutlass.cu  gemm_tensor_core.cu  gemm_wmma_0.cu  gemm_wmma_1.cu  gemm_wmma_10.cu  gemm_wmma_2.cu  gemm_wmma_3.cu  gemm_wmma_4.cu  gemm_wmma_5.cu  gemm_wmma_6.cu  gemm_wmma_7.cu  gemm_wmma_8.cu  gemm_wmma_9.cu
learn_triton/: 01-vector-add.py  02-fused-softmax.py  04-low-memory-dropout.py  05-layer-norm.py  07-extern-functions.py  08-grouped-gemm.py
learn_triton/demo_code/: 02-fused-softmax.py  03-matrix-multiplication.py  06-fused-attention.py  softmax2.py  torch_dynamo.py  torch_triton_learn_0.py
learn_triton/llm_triton/: pytorch_infer_qwen.py  readme.md  vllm_qwen.py
learn_triton/llm_triton/kernel_lab/: matmul_test.py  readme.md
learn_triton/llm_triton/triton_qwen.py/: layer.py  load_param.py  run.py  sdpa_attention.py  utils_qwen.py
learn_triton/llm_triton/triton_qwen/version_0/: layer.py  (+3 more)
learn_triton/llm_triton/triton_vs_torch_matmul/: ast_test.py  dump_kernel.py  triton_ir.py  triton_kernel.py
softmax/: CMakeLists.txt  readme.md  softmax_main.cpp
softmax/src/: profile_utils.cuh  softmax.hpp  softmax_2.cu
test_code/: CMakeLists.txt  main.cu  main_async_copy.cu  main_shfl_down_sync.cu
utils/: utils_function.cpp  utils_function.hpp
(+11 files in other folders)
